# FileSorter

./: CMakeLists.txt  DockerFile  Makefile  README.md  docker-compose.yaml  main.cpp
GeneratedData/: test_digits.txt  test_digits_sorted.txt  test_symbols.txt  test_symbols_sorted.txt
Generator/: CMakeLists.txt  Generator.cpp  Generator.hpp
StringSorter/: CMakeLists.txt  Sorter.cpp  Sorter.hpp
Tests/: Tests.hpp  main.cpp
